--- a/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
+++ b/config-yml/search_api.index.pages_newspapers_lib_unb_ca.yml
@@ -27,6 +27,14 @@ field_settings:
     label: 'Parent Issue ID'
     property_path: parent_digital_issue_id
     type: integer
+  parent_digital_page_id:
+    label: 'Parent Page ID'
+    property_path: parent_digital_page_id
+    type: integer
+  parent_digital_title_id:
+    label: 'Parent Digital Title ID'
+    property_path: parent_digital_title_id
+    type: integer
   parent_issue_issue:
     label: 'Parent Issue Issue'
     property_path: parent_issue_issue
