--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - ./env/drupal.env
     volumes:
       - ./config-yml:/app/configuration
+      - ./content:/app/content
       - ./custom/modules:/app/modules/custom
       - ./custom/themes:/app/themes/custom
       - ./tests:/app/tests
