IN-123 Convert docker-compose to v3 format

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: '3'
 
 services:
   mysql:
@@ -30,6 +30,9 @@ services:
         - COMPOSER_DEPLOY_DEV=dev
     restart: always
     container_name: newspapers.lib.unb.ca
+    depends_on:
+      - mysql
+      - drupal-solr-lib-unb-ca
     expose:
       - "80"
     ports:
