--- a/config-yml/block.block.exposedformdigital_page_listerpage_search.yml
+++ b/config-yml/block.block.exposedformdigital_page_listerpage_search.yml
@@ -19,11 +19,11 @@ settings:
   id: 'views_exposed_filter_block:digital_page_lister-page_search'
   label: ''
   provider: views
-  label_display: visible
+  label_display: '0'
   views_label: ''
 visibility:
   request_path:
     id: request_path
-    pages: '<front>'
+    pages: "<front>\r\n/page-search*"
     negate: false
     context_mapping: {  }
