--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1125,6 +1125,7 @@ display:
         exposed_form: false
         pager: false
         cache: false
+        title: false
       fields:
         page_no:
           id: page_no
@@ -1696,8 +1697,8 @@ display:
             description: ''
             use_operator: false
             operator: search_api_fulltext_op
-            identifier: query
-            required: false
+            identifier: fulltext
+            required: true
             remember: false
             multiple: false
             remember_roles:
@@ -1726,7 +1727,7 @@ display:
         groups:
           1: AND
       exposed_form:
-        type: basic
+        type: input_required
         options:
           submit_button: Search
           reset_button: true
@@ -1735,6 +1736,8 @@ display:
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
+          text_input_required: 'Select any filter and click on Apply to see results'
+          text_input_required_format: full_html
       pager:
         type: full
         options:
