NBNP-102 Update search input label text

--- a/config-yml/views.view.digital_page_lister.yml
+++ b/config-yml/views.view.digital_page_lister.yml
@@ -1761,6 +1761,7 @@ display:
           quantity: 9
       cache:
         type: none
+      title: 'Search digital fulltext'
     cache_metadata:
       max-age: -1
       contexts:
